TEST_PROGRAMS/INVALID/03/invalid_print5.go
package main

func f() {

	if x { 

		id = 123;
		println("my id:",a)
		//missing paren
		print (x
	}
}
